test/compile_errors/err_defer_continue.w
//! expect-check-fail: continue not allowed in defer

fn bad_continue:
    while true:
        defer:
            continue
